syntax = "proto3";

package yandex.cloud.priv.marketplace.licenseserver.v1.license.partners;

import "yandex/cloud/api/operation.proto";
import "yandex/cloud/priv/operation/operation.proto";
import "yandex/cloud/priv/validation.proto";
import "yandex/cloud/priv/marketplace/licenseserver/v1/license/template.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/marketplace/licenseserver/v1/license/partners;partners";
option java_package = "PATS";

service TemplateService {
    rpc Get(GetTemplateRequest) returns (Template);
    rpc ListByTariffID(ListTemplateByTariffIDRequest) returns (ListTemplateResponse);

    rpc Create(CreateTemplateRequest) returns (operation.Operation) {
        option (yandex.cloud.api.operation) = {
            metadata: "CreateTemplateMetadata"
            response: "Template"
        };
    }

    rpc Deprecate(DeprecateTemplateRequest) returns (operation.Operation) {
        option (yandex.cloud.api.operation) = {
            metadata: "DeprecateTemplateMetadata"
            response: "Template"
        };
    }
}

message GetTemplateRequest {
    string id = 1 [(required) = true];
}

message ListTemplateByTariffIDRequest {
    string publisher_id = 1 [(required) = true];
    string product_id = 2 [(required) = true];
    string tariff_id = 3 [(required) = true];
    int64 page_size = 4;
    string page_token = 5;
}

message CreateTemplateRequest {
    string publisher_id = 1 [(required) = true];
    string product_id = 2 [(required) = true];
    string tariff_id = 3 [(required) = true];
}
message CreateTemplateMetadata {
    string template_id = 1;
}

message DeprecateTemplateRequest {
    string id = 1 [(required) = true];
}

message DeprecateTemplateMetadata {
    string template_id = 1;
}
